--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -18,6 +18,6 @@ spec:
       autoscaling.knative.dev/minScale: "1"
   source:
     git:
-      url: <https URL for your generated project's Git repository>
+      url: https://github.com/tom-collings/tanzu-java-web-app-workflow
       ref:
         branch: main
